--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+    <a href="https://www.youtube.com/watch?v=T9HbWSZICQ4">My current favourite song is fitoor</a>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
